--- a/src/app/pratiche/richiesta-rottura-suolo/richiesta-rottura-suolo.component.scss
+++ b/src/app/pratiche/richiesta-rottura-suolo/richiesta-rottura-suolo.component.scss
@@ -1,3 +1,14 @@
-body {
-    height: 100%;
+.container {
+    max-width: 927px;
+    padding: 1em;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.mat-form-field + .mat-form-field {
+    margin-left: 8px;
+}
+
+mat-expansion-panel{
+    margin-bottom: 1em;
 }
