--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,9 +13,9 @@
         </mat-list-item>
         <mat-divider></mat-divider>
         <h3 matSubheader>Pratiche</h3>
-        <mat-list-item *ngFor="let richiesta of richieste" (click)="snav.toggle()" [routerLink]="richiesta.link">
-            <h4 matLine>{{richiesta.name}}</h4>
-        </mat-list-item>
+          <mat-list-item (click)="snav.toggle()" routerLink="nuova-pratica">
+            <h4 matLine>Nuova Pratica</h4>
+          </mat-list-item>
         <mat-divider></mat-divider>
       </mat-nav-list>
     </mat-sidenav>
