--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,12 @@
 <div class="container">
-  <mat-toolbar color="primary" class="toolbar">
+  <mat-toolbar color="primary" class="toolbar main-menu">
     <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
     <h1 routerLink="" class="app-name">{{title}}</h1>
+    <span class="example-fill-remaining-space"></span>
+    <button mat-button *ngIf="!isUserLoggedIn" routerLink="/login">
+      <mat-icon>account_circle</mat-icon>
+      Log in
+    </button>
   </mat-toolbar>
   
   <mat-sidenav-container class="sidenav-container">
