--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,9 +1,9 @@
 <mat-card class="signup-form">
-    <form [formGroup]="loginForm">
+    <form [formGroup]="signupForm">
         <mat-form-field class="div-full" appearance="outline">
             <mat-label>Utente</mat-label>
             <input matInput formControlName="user" placeholder="Utente" required>
-            <mat-error>{{getErrorMessage(loginForm.get('user'))}}</mat-error>
+            <mat-error>{{getErrorMessage(signupForm.get('user'))}}</mat-error>
         </mat-form-field>
         <mat-form-field class="div-full" appearance="outline">
             <mat-label>Password</mat-label>
@@ -11,13 +11,12 @@
             <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                 <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
             </button>
-            <mat-error>{{getErrorMessage(loginForm.get('password'))}}</mat-error>
+            <mat-error>{{getErrorMessage(signupForm.get('password'))}}</mat-error>
         </mat-form-field>
         <div class="div-buttons">
-          <span><mat-icon>info_outline</mat-icon> Entra come utente registrato oppure <a routerLink="/signup">registrati</a>.</span>
+          <span><mat-icon>info_outline</mat-icon> Se sei già registrato esegui la <a routerLink="/login">login</a>.</span>
           <div class="example-fill-remaining-space "></div>
-          <button class="button-login" mat-raised-button color="primary" (click)="logIn()">Login</button>
+          <button class="button-login" mat-raised-button color="primary" (click)="submit()">Conferma</button>
         </div>
     </form>
 </mat-card>
-
