--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<mat-card class="signup-form">
+<mat-card class="login-form">
     <form [formGroup]="loginForm">
         <mat-form-field class="div-full" appearance="outline">
             <mat-label>Utente</mat-label>
