--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,9 @@
     </mat-sidenav>
   
     <mat-sidenav-content>
-      <router-outlet></router-outlet>
+      <div class="div-content">
+        <router-outlet></router-outlet>
+      </div>
     </mat-sidenav-content>
   </mat-sidenav-container>
 </div>
