--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -23,6 +23,10 @@ h1.app-name {
     flex: 1;
 }
 
+.div-content{
+    padding: 1em;
+}
+
 .is-mobile .sidenav-container {
     /* When the sidenav is fixed, don't constrain the height of the sidenav container. This allows the
        `<body>` to be our scrolling element for mobile layouts. */
